k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: iot-ids
  labels:
    name: iot-ids
    environment: production
